--- a/src/component/MainComponents/Cards/Card3Style.css
+++ b/src/component/MainComponents/Cards/Card3Style.css
@@ -1,4 +1,4 @@
-#container {
+#card-three-container {
     transition: 0.5s;
     cursor: pointer;
     width: 19%;
@@ -13,16 +13,24 @@
     flex-direction: column
 }
 
-#BigText {
-    font-size: 1.1rem; font-weight: 800
+#card-three-image-container {
+    cursor: pointer;
+    border-radius: 10px;
+    height: 200px;
+    margin-bottom: 8px
 }
 
-#SmallText {
+#card-three-big-text {
+    font-size: 1.1rem;
+    font-weight: 800
+}
+
+#card-three-small-text {
     font-size: 1rem;
     color: grey
 }
 
-#TextContainer {
+#card-three-text-container {
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -31,7 +39,7 @@
 }
 
 @media screen and (max-width:900px) {
-    #container {
+    #card-three-container {
         min-width: 150px;
         width: 32%;
         height: 240px;
@@ -39,19 +47,22 @@
         margin-bottom: 10px;
     }
 
-    #Trophyimg {
+    #card-three-image-container {
+        height: 120px;
+        margin-bottom: 8px;
+    }
+    #card-three-image {
         height: 120px;
     }
-
-    #BigText {
+    #card-three-big-text {
         font-size: 0.8rem;
     }
 
-    #SmallText {
+    #card-three-small-text {
         font-size: 0.8rem;
     }
 
-    #TextContainer {
+    #card-three-text-container {
         padding: 4px;
         gap: 2px;
     }
